[package]
name = "ds2480b"
version = "0.1.0"
authors = ["Andreas Monitzer <andreas@monitzer.com>"]
license = "MIT"
edition = "2018"

[dependencies]
tokio = {version = "0.1.0", features = ["async-await-preview"]}
tokio-io = "0.1"
tokio-serial = "3.1"
tokio-timer = "0.2"
bigwise = "0.4"
tokio-io-timeout = "0.3.1"

[dev-dependencies]
hex = "0.3"
